# SystemBuilding

./: CMakeLists.txt  README.md
A/: main.cpp
B/: gen.py  main.h
